# EmbeddedProtoFraming

./: .gitignore  CMakeLists.txt  protoc-gen-eams  protoc-gen-eams.bat
generator/EmbeddedProto/: ProtoFile.py  main.py
generator/EmbeddedProto/templates/: Header.h  TypeDefMsg.h
src/: Framing.cpp  Framing.h  MessageInterface.cpp  MessageInterface.h  MessageSizeCalculator.h  Parser.h  WriteBufferFixedSize.h  WriteBufferInterface.h
test/mock/: WriteBufferMock.h
